@@ -5,6 +5,7 @@ import static com.gtnewhorizon.structurelib.structure.StructureUtility.ofBlock;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -38,9 +39,12 @@ import com.gtnewhorizon.structurelib.util.ItemStackPredicate;
 import gnu.trove.TIntCollection;
 import gnu.trove.list.array.TIntArrayList;
 import gnu.trove.set.hash.TIntHashSet;
+import gregtech.api.GregTechAPI;
 import gregtech.api.interfaces.IHatchElement;
+import gregtech.api.interfaces.IItemContainer;
 import gregtech.api.interfaces.metatileentity.IMetaTileEntity;
 import gregtech.api.interfaces.tileentity.IGregTechTileEntity;
+import gregtech.api.metatileentity.implementations.MTEMultiBlockBase;
 import gregtech.common.blocks.ItemMachines;
 import gregtech.common.misc.GTStructureChannels;
 
@@ -56,6 +60,7 @@ public class HatchElementBuilder<T> {
     private BiFunction<? super T, ItemStack, ? extends Predicate<ItemStack>> mHatchItemFilter;
     private Supplier<String> mHatchItemType;
     private Predicate<? super T> mReject;
+    private Supplier<List<String>> mDescriptionNames;
     private boolean mCacheHint;
     private boolean mNoStop;
     private boolean mExclusive;
@@ -75,17 +80,28 @@ public class HatchElementBuilder<T> {
     @SafeVarargs
     public final HatchElementBuilder<T> anyOf(IHatchElement<? super T>... elements) {
         if (elements == null || elements.length == 0) throw new IllegalArgumentException();
+        mDescriptionNames = () -> Arrays.stream(elements)
+            .flatMap(
+                e -> e.getDescriptionLangKeys()
+                    .stream())
+            .collect(Collectors.toList());
         return adder(
             Arrays.stream(elements)
                 .map(
                     e -> e.adder()
                         .rebrand())
                 .reduce(IGTHatchAdder::orElse)
-                .get()).hatchClasses(
-                    Arrays.stream(elements)
-                        .map(IHatchElement::mteClasses)
-                        .flatMap(Collection::stream)
-                        .collect(Collectors.toList()))
+                .get()).hatchItemFilter(obj -> is -> {
+                    IMetaTileEntity tile = ItemMachines.getMetaTileEntity(is);
+                    return tile != null && Arrays.stream(elements)
+                        .anyMatch(
+                            e -> !e.mteBlacklist()
+                                .contains(tile.getClass()) && e.matchesHatch(tile));
+                })
+                    .shouldSkip(
+                        (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c,
+                            t) -> t != null && Arrays.stream(elements)
+                                .anyMatch(e -> e.matchesHatch(t.getMetaTileEntity())))
                     .cacheHint(
                         () -> Arrays.stream(elements)
                             .map(IHatchElement::getDisplayName)
@@ -132,17 +148,19 @@ public class HatchElementBuilder<T> {
         if (elements == null || elements.isEmpty() || elements.containsKey(null) || elements.containsValue(null))
             throw new IllegalArgumentException();
 
+        mDescriptionNames = () -> elements.keySet()
+            .stream()
+            .flatMap(
+                e -> e.getDescriptionLangKeys()
+                    .stream())
+            .collect(Collectors.toList());
+
         List<Class<? extends IMetaTileEntity>> blacklist = elements.keySet()
             .stream()
             .map(IHatchElement::mteBlacklist)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
 
-        List<Class<? extends IMetaTileEntity>> list = elements.keySet()
-            .stream()
-            .map(IHatchElement::mteClasses)
-            .flatMap(Collection::stream)
-            .collect(Collectors.toList());
         // map cannot be null or empty, so assert Optional isPresent
         return adder(
             elements.keySet()
@@ -151,22 +169,23 @@ public class HatchElementBuilder<T> {
                     e -> e.adder()
                         .rebrand())
                 .reduce(IGTHatchAdder::orElse)
-                .orElseThrow(AssertionError::new))
-                    .hatchItemFilter(
-                        obj -> GTStructureUtility.filterByMTEClassWithBlacklist(
-                            elements.entrySet()
-                                .stream()
-                                .filter(
-                                    entry -> entry.getKey()
-                                        .count(obj)
-                                        < entry.getValue()
-                                            .longValue())
-                                .flatMap(
-                                    entry -> entry.getKey()
-                                        .mteClasses()
-                                        .stream())
-                                .collect(Collectors.toList()),
-                            blacklist))
+                .orElseThrow(AssertionError::new)).hatchItemFilter(obj -> {
+                    List<IHatchElement<? super T>> neededElements = elements.entrySet()
+                        .stream()
+                        .filter(
+                            entry -> entry.getKey()
+                                .count(obj)
+                                < entry.getValue()
+                                    .longValue())
+                        .map(Map.Entry::getKey)
+                        .collect(Collectors.toList());
+                    return is -> {
+                        IMetaTileEntity tile = ItemMachines.getMetaTileEntity(is);
+                        return tile != null && !blacklist.contains(tile.getClass())
+                            && neededElements.stream()
+                                .anyMatch(e -> e.matchesHatch(tile));
+                    };
+                })
                     .shouldReject(
                         obj -> elements.entrySet()
                             .stream()
@@ -177,8 +196,9 @@ public class HatchElementBuilder<T> {
                                         .longValue()))
                     .shouldSkip(
                         (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c,
-                            t) -> t != null && list.stream()
-                                .anyMatch(clazz -> clazz.isInstance(t.getMetaTileEntity())))
+                            t) -> t != null && elements.keySet()
+                                .stream()
+                                .anyMatch(e -> e.matchesHatch(t.getMetaTileEntity())))
                     .cacheHint(
                         () -> elements.keySet()
                             .stream()
@@ -291,7 +311,13 @@ public class HatchElementBuilder<T> {
         mCacheHint = true;
         return this;
     }
-    // endregion
+
+    public String getHatchItemTypeName() {
+        if (mHatchItemType != null) {
+            return mHatchItemType.get();
+        }
+        return "unspecified GT hatch";
+    }
 
     public HatchElementBuilder<T> continueIfSuccess() {
         mNoStop = true;
@@ -302,6 +328,55 @@ public class HatchElementBuilder<T> {
         mNoStop = false;
         return this;
     }
+
+    public IGTHatchAdder<? super T> getAdder() {
+        return mAdder;
+    }
+
+    public int getCasingIndex() {
+        return mCasingIndex;
+    }
+
+    public int getHint() {
+        return mHint;
+    }
+
+    public BiPredicate<? super T, ? super IGregTechTileEntity> getShouldSkip() {
+        return mShouldSkip;
+    }
+
+    public BiFunction<? super T, ItemStack, ? extends Predicate<ItemStack>> getHatchItemFilter() {
+        return mHatchItemFilter;
+    }
+
+    public Supplier<String> getHatchItemType() {
+        return mHatchItemType;
+    }
+
+    public Predicate<? super T> getReject() {
+        return mReject;
+    }
+
+    public Supplier<List<String>> getDescriptionNames() {
+        return mDescriptionNames;
+    }
+
+    public boolean isCacheHint() {
+        return mCacheHint;
+    }
+
+    public boolean isNoStop() {
+        return mNoStop;
+    }
+
+    public boolean isExclusive() {
+        return mExclusive;
+    }
+
+    public EnumSet<ForgeDirection> getDisallowedDirection() {
+        return mDisallowedDirection;
+    }
+    // endregion
 
     /**
      * Help automatic hatch side determination code by ruling out some directions. Note the automatic hatch side
@@ -337,10 +412,53 @@ public class HatchElementBuilder<T> {
     }
     // endregion
 
+    public HatchElementBuilder<T> description(Supplier<String> description) {
+        mDescriptionNames = () -> Collections.singletonList(description.get());
+        return this;
+    }
+
+    public HatchElementBuilder<T> descriptions(Supplier<List<String>> descriptions) {
+        mDescriptionNames = descriptions;
+        return this;
+    }
+
+    /**
+     * Sets the description from one or more ItemStacks. Uses each stack's unlocalized name as the lang key. This
+     * overrides any description auto-detected by {@link #hatchClass}, {@link #hatchClasses}, {@link #anyOf}, or
+     * {@link #atLeast}. Can be chained after any of those methods.
+     */
+    public HatchElementBuilder<T> descriptionFromStacks(IItemContainer... items) {
+        IItemContainer[] copy = items.clone();
+        mDescriptionNames = () -> {
+            List<String> keys = new ArrayList<>(copy.length);
+            for (IItemContainer item : copy) {
+                keys.add(
+                    item.get(1)
+                        .getUnlocalizedName() + ".name");
+            }
+            return keys;
+        };
+        return this;
+    }
+
+    public HatchElementBuilder<T> descriptionFromStacks(ItemStack... stacks) {
+        ItemStack[] copy = stacks.clone();
+        mDescriptionNames = () -> {
+            List<String> keys = new ArrayList<>(copy.length);
+            for (ItemStack stack : copy) {
+                keys.add(stack.getUnlocalizedName() + ".name");
+            }
+            return keys;
+        };
+        return this;
+    }
+
     // region intermediate
     public HatchElementBuilder<T> hatchClass(Class<? extends IMetaTileEntity> clazz) {
+        mDescriptionNames = () -> Collections.singletonList(clazz.getSimpleName());
         return hatchItemFilter(c -> is -> clazz.isInstance(ItemMachines.getMetaTileEntity(is)))
-            .cacheHint(() -> StatCollector.translateToLocal("gt.hatch_element_of_class") + clazz.getSimpleName())
+            .cacheHint(
+                () -> StatCollector.translateToLocalFormatted("gt.hatch_element_of_class", clazz.getSimpleName()))
             .shouldSkip(
                 (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c, t) -> clazz
                     .isInstance(t.getMetaTileEntity()));
@@ -353,6 +471,13 @@ public class HatchElementBuilder<T> {
 
     public final HatchElementBuilder<T> hatchClasses(List<? extends Class<? extends IMetaTileEntity>> classes) {
         List<? extends Class<? extends IMetaTileEntity>> list = new ArrayList<>(classes);
+        mDescriptionNames = () -> {
+            List<String> classNames = new ArrayList<>(list.size());
+            for (var clazz : list) {
+                classNames.add(clazz.getSimpleName());
+            }
+            return classNames;
+        };
         return hatchItemFilter(obj -> GTStructureUtility.filterByMTEClass(list)).cacheHint(
             () -> list.stream()
                 .map(Class::getSimpleName)
@@ -368,9 +493,16 @@ public class HatchElementBuilder<T> {
     }
 
     public HatchElementBuilder<T> hatchId(int aId) {
+        mDescriptionNames = () -> {
+            IMetaTileEntity mte = GregTechAPI.METATILEENTITIES[aId];
+            if (mte != null) {
+                return Collections.singletonList("gt.blockmachines." + mte.getMetaName() + ".name");
+            }
+            return Collections.singletonList("Unknown MTE #" + aId);
+        };
         return hatchItemFilter(
             c -> is -> GTUtility.isStackValid(is) && is.getItem() instanceof ItemMachines && is.getItemDamage() == aId)
-                .cacheHint(() -> StatCollector.translateToLocal("gt.hatch_element_of_id") + aId)
+                .cacheHint(() -> StatCollector.translateToLocalFormatted("gt.hatch_element_of_id", aId))
                 .shouldSkip(
                     (BiPredicate<? super T, ? super IGregTechTileEntity> & Builtin) (c, t) -> t != null
                         && t.getMetaTileID() == aId);
@@ -380,6 +512,18 @@ public class HatchElementBuilder<T> {
         if (aIds == null || aIds.length == 0) throw new IllegalArgumentException();
         if (aIds.length == 1) return hatchId(aIds[0]);
         TIntCollection coll = aIds.length < 16 ? new TIntArrayList(aIds) : new TIntHashSet(aIds);
+        int[] sortedIds = coll.toArray();
+        Arrays.sort(sortedIds);
+        mDescriptionNames = () -> {
+            List<String> names = new ArrayList<>(sortedIds.length);
+            for (int id : sortedIds) {
+                IMetaTileEntity mte = GregTechAPI.METATILEENTITIES[id];
+                if (mte != null) {
+                    names.add("gt.blockmachines." + mte.getMetaName() + ".name");
+                }
+            }
+            return names;
+        };
         return hatchItemFilter(
             c -> is -> GTUtility.isStackValid(is) && is.getItem() instanceof ItemMachines
                 && coll.contains(is.getItemDamage())).cacheHint(
@@ -445,13 +589,15 @@ public class HatchElementBuilder<T> {
         }
         return new IStructureElement<>() {
 
-            private String mHint = mHatchItemType == null ? "unspecified GT hatch" : mHatchItemType.get();
-
             @Override
             public boolean check(T t, World world, int x, int y, int z) {
                 TileEntity tileEntity = world.getTileEntity(x, y, z);
                 return tileEntity instanceof IGregTechTileEntity
                     && mAdder.apply(t, (IGregTechTileEntity) tileEntity, (short) mCasingIndex);
+            }
+
+            private String getHatchItemTypeName() {
+                return HatchElementBuilder.this.getHatchItemTypeName();
             }
 
             @Override
@@ -475,28 +621,38 @@ public class HatchElementBuilder<T> {
             }
 
             @Override
-            public boolean placeBlock(T t, World world, int i, int i1, int i2, ItemStack itemStack) {
-                // TODO
-                return false;
-            }
-
-            private String getHint() {
-                if (mHint != null) return mHint;
-                String tHint = mHatchItemType.get();
-                if (tHint == null) return "?";
-                if (mCacheHint) {
-                    mHint = tHint;
-                    if (mHint != null)
-                        // yeet the getter, since its product is retrieved and cached
-                        mHatchItemType = null;
+            public boolean placeBlock(T t, World world, int x, int y, int z, ItemStack trigger) {
+                IGregTechTileEntity base = null;
+                if (t instanceof IMetaTileEntity mte) {
+                    base = mte.getBaseMetaTileEntity();
                 }
-                return tHint;
+                if (base == null) return false;
+
+                EntityPlayerMP player = GTUtility.getFakePlayer(base);
+                if (player == null) return false;
+
+                AutoPlaceEnvironment env = AutoPlaceEnvironment
+                    .fromLegacy(GTCreativeHatchSource.instance, player, chat -> {});
+                PlaceResult result = survivalPlaceBlock(t, world, x, y, z, trigger, env);
+
+                if (t instanceof MTEMultiBlockBase multi) {
+                    multi.checkStructure(true, base);
+                }
+                return result == PlaceResult.ACCEPT || result == PlaceResult.ACCEPT_STOP || result == PlaceResult.SKIP;
             }
 
             @Override
             public BlocksToPlace getBlocksToPlace(T t, World world, int x, int y, int z, ItemStack trigger,
                 AutoPlaceEnvironment env) {
                 return BlocksToPlace.create(mHatchItemFilter.apply(t, trigger));
+            }
+
+            @Override
+            public List<String> getDescription(T context) {
+                if (mDescriptionNames != null) {
+                    return mDescriptionNames.get();
+                }
+                return Collections.singletonList(getHatchItemTypeName());
             }
 
             @Deprecated
@@ -525,7 +681,7 @@ public class HatchElementBuilder<T> {
                     return PlaceResult.REJECT;
                 if (mReject != null && mReject.test(t)) return PlaceResult.REJECT;
                 if (!GTStructureChannels.HATCH.hasValue(trigger) && !mExclusive) {
-                    String type = getHint();
+                    String type = getHatchItemTypeName();
                     env.getChatter()
                         .accept(new ChatComponentTranslation("GT5U.autoplace.error.no_placeable", type));
                     return PlaceResult.REJECT;
@@ -533,7 +689,7 @@ public class HatchElementBuilder<T> {
                 ItemStack taken = env.getSource()
                     .takeOne(mHatchItemFilter.apply(t, trigger), true);
                 if (GTUtility.isStackInvalid(taken)) {
-                    String type = getHint();
+                    String type = getHatchItemTypeName();
                     env.getChatter()
                         .accept(new ChatComponentTranslation("GT5U.autoplace.error.no_hatch", type));
                     return PlaceResult.REJECT;
@@ -557,7 +713,8 @@ public class HatchElementBuilder<T> {
                 if (env.getAPILevel() == AutoPlaceEnvironment.APILevel.Legacy) {
                     // a legacy decorator isn't passing down necessary information
                     // in that case, we just assume all facing is allowed
-                    allowed.addAll(Arrays.asList(ForgeDirection.VALID_DIRECTIONS));
+                    // we use the default of the block placing direction, skip the rotation by using empty list.
+                    // allowed.addAll(Arrays.asList(ForgeDirection.VALID_DIRECTIONS));
                 } else {
                     for (ForgeDirection direction : ForgeDirection.VALID_DIRECTIONS) {
                         // as noted on getWorldDirection Y axis should be flipped before use
